--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "axios": "^0.21.4",
     "next": "11.1.2",
     "postcss-cli": "^8.3.1",
     "react": "17.0.2",
