--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "axios": "^0.21.4",
     "next": "11.1.2",
+    "next-translate": "^1.0.7",
     "postcss-cli": "^8.3.1",
+    "qs": "^6.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
