--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vitalets/google-translate-api": "^7.0.0",
     "axios": "^0.21.4",
     "next": "11.1.2",
+    "next-pwa": "^5.3.1",
     "next-translate": "^1.0.7",
     "postcss-cli": "^8.3.1",
     "qs": "^6.10.1",
